# knowledge-brain

./: .gitignore  AGENT_OS_MANIFEST.yaml  CLAUDE.md  Makefile  README.md  permissions.yaml  pyproject.toml
docs/: mcp-setup.md
docs/plans/: 2026-04-25-mvp.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
knowledge_brain/: approval_store.py  jsonl.py  models.py  operations.py  quality.py  store.py  token_utils.py
knowledge_brain/cli/: export.py  import_jsonl.py  init.py  list.py  main.py  query.py  write.py
knowledge_brain/mcp/: server.py
tests/: conftest.py
tests/integration/: test_cli.py  test_mcp_server.py
tests/unit/: test_approval_store.py  test_jsonl.py  test_models.py  test_operations.py  test_quality.py  test_store.py  test_token_utils.py
