[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-brain"
version = "0.1.0"
description = "Persistent memory layer for AI agents — MVP."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Agniva" }]
dependencies = [
    "pydantic>=2.6",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
brain = "knowledge_brain.cli.main:main"
brain-mcp = "knowledge_brain.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_brain"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
